--- a/code/index.html
+++ b/code/index.html
@@ -5,19 +5,70 @@
     <!-- Change the title below -->
     <title>News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
+    <header class="header">
+      <div class="title-logo">
+        <div class="logo">
+          <img src="alien.png"/>
+        </div>
+        <h1 class="title-text">Alien Today</h1>
+      </div>
+      <div class="navbar">
+        <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">About</a></li>
+        </ul> 
+      </div>
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <div class="top-news-img">
+        <img src="spaceship.png">
+      </div>
+      <div class="top-news-text">
+        <h2 class="headline">Fifth launch successfull</h2>
+        <p class="healine-2">- With unparalleled excitement, "Alien-Air 385" gracefully touched down on the planet known as Earth, carrying a delegation of 1000 of us from distant stars. As we emerged from our spacecraft, we were met by welcoming committees comprising curious human scientists, diplomats, and representatives. The atmosphere was filled with a mix of awe and apprehension, as we embarked on this historic moment of interstellar connection.</p>
+      </div>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="other-news">
+      <div class="news">
+        <h3 class="news-text">"Strange animal that can be found in human-homes is now known to be called "dog""</h3>
+        <img src="dog.png">
+      </div>
+      <div class="news">
+        <h3 class="news-text"> "On warm days humans eat ice cream. We have tasted every flavor!"</h3>
+        <img src="ice-creams.jpg">
+      </div>
+      <div class="news">
+        <h3 class="news-text">"Technology is the future" </h3>
+        <img src="laptop.jpg">
+      </div>
+      <div class="news">
+        <h3 class="news-text">"Learn to live like the humans with these 10 steps"</h3>
+        <img src="live-like-human.jpg">
+      </div>
+      <div class="news">
+        <h3 class="news-text">"Plants - which ones to get and how to care of them"</h3>
+        <img src="plants.jpg">
+      </div>
+      <div class="news">
+        <h3 class="news-text">"Alien-friendly books that are guranteed to make you relax"</h3>
+        <img src="read.jpg">
+      </div>
+      <div class="news">
+        <h3 class="news-text">"Plans for sixth launch alreay in motion after successfull landing of Alien-Air 385"</h3>
+        <img src="rocket.png">
+      </div>
+      <div class="news">
+        <h3 class="news-text">"What is "Yoga" and why do humans do it?"</h3>
+        <img src="yoga.jpg">
+      </div>
     </section>
   </body>
 </html>
