Updated links and README

--- a/code/index.html
+++ b/code/index.html
@@ -28,10 +28,10 @@
 
         <!-- NAVIGATION MENU OPTIONS -->
         <div class="menu">
-          <li><a href="https://www.google.com/">Research</a></li>
-          <li><a href="https://www.google.com/">Topics</a></li>
-          <li><a href="https://www.google.com/">Podcasts</a></li>
-          <li><a href="https://www.google.com/">More</a></li>
+          <li><a href="https://www.google.com/" target="_blank">Research</a></li>
+          <li><a href="https://www.google.com/" target="_blank">Topics</a></li>
+          <li><a href="https://www.google.com/" target="_blank">Podcasts</a></li>
+          <li><a href="https://www.google.com/" target="_blank">More</a></li>
         </div>
       </ul>
     </nav>
@@ -43,8 +43,7 @@
       <div class="big-news-title">Mind-Blowing Honey Bee</div>
       <div class="big-news-text">Scientists make a groundbreaking discovery about honey bees: Unveiling their
         astonishing secret superpower in pollination! Prepare to be captivated as we reveal the mind-boggling findings
-        that could reshape our understanding of ecological balance. Click now to delve into the scientific marvels of
-        honey bees and witness the profound impact of their extraordinary pollination abilities!</div>
+        that could reshape our understanding of ecological balance. </div>
     </article>
   </section>
 
