Complete mobile first styling

--- a/code/index.html
+++ b/code/index.html
@@ -22,10 +22,10 @@
             <div class="hamburger-line"></div>
         </div>
 
-        <a class="navigation-link first-link" href="/">HOME</a>
-        <a class="navigation-link second-link" href="/">CULTURE</a>
-        <a class="navigation-link" href="/">SPORTS</a>
-        <a class="navigation-link" href="/">WEATHER</a>
+        <a class="navigation-link first-section" href="/">HOME</a>
+        <a class="navigation-link first-section" href="/">CULTURE</a>
+        <a class="navigation-link second-section" href="/">SPORTS</a>
+        <a class="navigation-link second-section" href="/">WEATHER</a>
 
     </header>
 
