Use relative file mapping

--- a/code/index.html
+++ b/code/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UTOPIA</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
 </head>
 
 <body>
     <header class="container navigation">
 
-        <img class="navigation-brand" src="/code/img/globe.svg">
+        <img class="navigation-brand" src="./img/globe.svg">
         <a class="navigation-title" href="/">UTOPIA</a>
 
         <div class="grow"></div>
