Edited image folder to make images show on Netlify

--- a/code/index.html
+++ b/code/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
 
-    <img class="logo" src="../images/science-logo-svg.svg" alt="The Science Hub logo">
+    <img class="logo" src="./images/science-logo-svg.svg" alt="The Science Hub logo">
 
     <article class="site-name">
       <span>Science Hub</span>
@@ -39,7 +39,7 @@
 
   <section class="big-news-container">
     <article class="grid-item big-news">
-      <img class="big-news-img" src="../images/honey-bee.jpg" alt="Honey bee at work">
+      <img class="big-news-img" src="./images/honey-bee.jpg" alt="Honey bee at work">
       <div class="big-news-title">Mind-Blowing Honey Bee</div>
       <div class="big-news-text">Scientists make a groundbreaking discovery about honey bees: Unveiling their
         astonishing secret superpower in pollination! Prepare to be captivated as we reveal the mind-boggling findings
@@ -51,7 +51,7 @@
   <section class="other-news-container">
 
     <article class="other-news-item">
-      <img src="../images/sleep.jpg" alt="The power of sleep">
+      <img src="./images/sleep.jpg" alt="The power of sleep">
       <div class="other-news-item-text">
         <h1>The power of sleep</h1>
         <p>Sleep has long puzzled scientists. Its purpose, benefits, and
@@ -61,7 +61,7 @@
     </article>
 
     <article class="other-news-item">
-      <img src="../images/bat.jpg" alt="Tiny fungus causing big problems">
+      <img src="./images/bat.jpg" alt="Tiny fungus causing big problems">
       <div class="other-news-item-text">
         <h1>Tiny fungus causing big problems</h1>
         <p>An emerging disease causes regional population collapse of a common north American Bat Species.</p>
@@ -69,7 +69,7 @@
     </article>
 
     <article class="other-news-item">
-      <img src="../images/microplastics.jpg" alt="Microplastics found in fish and fishmeal">
+      <img src="./images/microplastics.jpg" alt="Microplastics found in fish and fishmeal">
       <div class="other-news-item-text">
         <h1>Microplastics in fish and fishmeal</h1>
         <p>Microplastics have emerged as concerning contaminants due to their ingestion by marine organisms.
@@ -78,7 +78,7 @@
     </article>
 
     <article class="other-news-item">
-      <img src="../images/cell.jpg" alt="The building blocks of Alzeimer">
+      <img src="./images/cell.jpg" alt="The building blocks of Alzeimer">
       <div class="other-news-item-text">
         <h1>The building blocks of Alzheimer</h1>
         <p>New mouse model unravels explosive interaction between Alzheimer's proteins!</p>
