--- a/code/index.html
+++ b/code/index.html
@@ -17,22 +17,33 @@
     <div class="site-container">
       <header>
         <!-- Some kind of logo and navbar -->
-        <nav class="upper-nav">
-          <div class="title-logo">
-            <a
-              href="https://www.freepik.com/free-vector/cute-shiba-inu-dog-gamer-holding-keyboard-with-headphone-cartoon-vector-icon-illustration-animal_29660032.htm#query=dog%20gaming%20logo&position=5&from_view=keyword&track=ais"
-              target="_blank"
-            >
-              <img src="./images/5800_9_03.png" alt="logo" class="logo" />
-            </a>
-            <h1 class="site-title">GameNews</h1>
+        <!---->
+        <div class="nav">
+          <input type="checkbox" id="nav-check" />
+          <div class="nav-header">
+            <div class="title-logo">
+              <a
+                href="https://www.freepik.com/free-vector/cute-shiba-inu-dog-gamer-holding-keyboard-with-headphone-cartoon-vector-icon-illustration-animal_29660032.htm#query=dog%20gaming%20logo&position=5&from_view=keyword&track=ais"
+                target="_blank"
+              >
+                <img src="./images/5800_9_03.png" alt="logo" class="logo" />
+              </a>
+              <h1 class="site-title">GameNews</h1>
+            </div>
           </div>
-          <ul class="top-nav-links">
-            <li>Home</li>
-            <li>PC</li>
-            <li>Playstation</li>
-            <li>Nintendo</li>
-            <li>XBOX</li>
+          <div class="nav-btn">
+            <label for="nav-check">
+              <span></span>
+              <span></span>
+              <span></span>
+            </label>
+          </div>
+          <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">PC</a></li>
+            <li><a href="#">Playstation</a></li>
+            <li><a href="#">Nintendo</a></li>
+            <li><a href="#">XBOX</a></li>
           </ul>
           <div class="search-box">
             <input type="text" placeholder="Search..." class="search" />
@@ -40,23 +51,13 @@
               <i class="fa fa-search"></i>
             </button>
           </div>
-        </nav>
-        <nav class="site-nav">
-          <ul class="nav-menu">
-            <li class="nav-menu-items trending">Trending:</li>
-            <li class="nav-menu-items">Baldurs Gate III</li>
-            <li class="nav-menu-items">Diablo IV</li>
-            <li class="nav-menu-items">Starfield</li>
-            <li class="nav-menu-items">Final Fantasy XVI</li>
-            <li class="nav-menu-items">Zelda: Tears of the Kingdom</li>
-          </ul>
-        </nav>
+        </div>
       </header>
 
       <div class="page-container">
         <section class="big-news">
           <!-- The big news content -->
-          <div class="zoom-img">
+          <div class="big-news__image">
             <img src="./images/bg3.jpg" alt="baldurs-gate-3-image" />
           </div>
           <div class="big-news__article">
@@ -98,10 +99,10 @@
               </div>
               <div class="latest-article">
                 <h3 class="latest-article__title">
-                  Steam Deck gains popularity
+                  Upcoming games for the PS5
                 </h3>
                 <p class="latest-article__content">
-                  SteamOS overtakes MacOS as 2nd most popular gaming OS
+                  Check out our list of the video game releases coming in 2023
                 </p>
               </div>
             </div>
@@ -114,11 +115,14 @@
             <div class="small-news__image">
               <img src="./images/diablo.jpg" alt="diablo-4-image" />
             </div>
-            <h5 class="small-news__category">Diablo 4</h5>
-            <h3 class="small-news__title">Catch Up On Patch 1.1.1</h3>
-            <p class="small-news__text">
-              lorem ipsum dipsum hey banana goes to pineapple
-            </p>
+            <div class="small-news-info">
+              <h5 class="small-news__category">Diablo 4</h5>
+              <h3 class="small-news__title">Catch Up On Patch 1.1.1</h3>
+              <p class="small-news__text">
+                Read about all the changes that will be implemented in the
+                upcoming patch.
+              </p>
+            </div>
           </div>
 
           <div class="small-news__article">
@@ -129,11 +133,14 @@
                 class="small-news__image"
               />
             </div>
-            <h5 class="small-news__category">Starfield</h5>
-            <h3 class="small-news__title">Catch Up On Patch 1.1.1</h3>
-            <p class="small-news__text">
-              lorem ipsum dipsum hey banana goes to pineapple
-            </p>
+            <div class="small-news-info">
+              <h5 class="small-news__category">Starfield</h5>
+              <h3 class="small-news__title">Before you buy Starfield</h3>
+              <p class="small-news__text">
+                We know you're looking forward to Starfield, but will you be
+                able to play it?
+              </p>
+            </div>
           </div>
           <div class="small-news__article">
             <div class="small-news__image">
@@ -143,11 +150,14 @@
                 class="small-news__image"
               />
             </div>
-            <h5 class="small-news__category">Zelda: Tears of the Kingdom</h5>
-            <h3 class="small-news__title">Catch Up On Patch 1.1.1</h3>
-            <p class="small-news__text">
-              lorem ipsum dipsum hey banana goes to pineapple
-            </p>
+            <div class="small-news-info">
+              <h5 class="small-news__category">Zelda: Tears of the Kingdom</h5>
+              <h3 class="small-news__title">Best ways to earn rupees</h3>
+              <p class="small-news__text">
+                Here are a few ways for struggling players to help Link earn
+                some currency.
+              </p>
+            </div>
           </div>
 
           <div class="small-news__article">
@@ -158,11 +168,13 @@
                 class="small-news__image"
               />
             </div>
-            <h5 class="small-news__category">Final Fantasy 16</h5>
-            <h3 class="small-news__title">Catch Up On Patch 1.1.1</h3>
-            <p class="small-news__text">
-              lorem ipsum dipsum hey banana goes to pineapple
-            </p>
+            <div class="small-news-info">
+              <h5 class="small-news__category">Final Fantasy 16</h5>
+              <h3 class="small-news__title">Don't miss these stories</h3>
+              <p class="small-news__text">
+                We know you want to save the world, but do these quests first!
+              </p>
+            </div>
           </div>
         </section>
       </div>
