--- a/code/index.html
+++ b/code/index.html
@@ -9,38 +9,18 @@
   <!-- dont forget the meta tag for responsiveness se vid hva er denne delen-->
   <!--obs sjekk media only i css.tilfeldig kode. hvordan bruker jeg det-->
 </head>
-<nav>
-  <a href="link to homepage">
-    <p class="logo">BEAUTY</p>
-  </a>
-
-
-
-
-
-
-
-
-  <!-- This is the menu for mobile test this  out, you need a code in css for the changes-->
-
-  <div class="hamburger-menu">
-    <span class="menu-line"></span>
-    <span class="menu-line"></span>
-    <span class="menu-line"></span>
-  </div>
-
-  <!-- This is the menu for tablet and desktop test this  out, you need a code in css for the changes. its all lines now-->
-
-  <div class="desktop-menu">
-    <a href="link to about page">about</a>
-    <a href="link to article page">article</a>
-    <a href="link to journal page">journal</a>
-    <!--make hoovers-->
-  </div>
-</nav>
 
 <body>
   <div>
+
+
+    <ul>
+      <li><a class="active" href="#home">Home</a></li>
+      <li><a href="#news">News</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#about">About</a></li>
+    </ul>
+
 
     <section class="grid-parent">
 
@@ -58,6 +38,7 @@
       <div class="grid-item grid-eight">8</div>
       <!--begynne med str før jeg legger mye inn-->
     </section>
+
 
     <header>
       <h1>Navn</h1>
@@ -102,5 +83,20 @@
   </div>
 </body>
 </div>
+
+
+<footer>
+  <ul>
+    <a href="www.facebook.com">
+      <li>facebook</li>
+    </a>
+    <a href="www.instagram">
+      <li>instagram</li>
+    </a>
+    <a href="länktillkontaktsida">
+      <li>contact</li>
+    </a>
+  </ul>
+</footer>
 
 </html>
