--- a/code/index.html
+++ b/code/index.html
@@ -11,26 +11,41 @@
 
 <body>
   <div>
-    <section class="grid-parent">
+    <header>
+      <!-- Some kind of logo and navbar -->
+      <ul>
+        <li><a class="active" href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+    </header>
+  </div>
+  <!-- End of the navigation -->
 
+  <div>
+    <section class="grid-parent">
       <div class="grid-item grid-a">a</div>
       <div class="grid-item grid-b">b</div>
       <div class="grid-item grid-c">c</div>
       <div class="grid-item lonly">lonly</div>
-      <div class="grid-item grid-d">d</div>
-      <div class="grid-item grid-e">e</div>
-      <div class="grid-item grid-f">f</div>
-      <div class="grid-item grid-g">g</div>
-      <div class="grid-item grid-h">h</div>
-      <div class="grid-item grid-i">i</div>
-      <div class="grid-item grid-j">j</div>
-
+      <div class="grid-item grid-d">
+        <p>Tester hvordan dette funker aaaaaaaaaaaaa aaaaaa aaaaaa aaaaaaa aaaaa</p>
+        <p>sssss</p>
+        <div class="image3 img3">
+          <img src="/code/Image1.png"></a>
+        </div>
+        <div>
+          <p></p>
+          <a href="www.google.com">test</a>
+        </div>
+        <div class="grid-item grid-e">e</div>
+        <div class="grid-item grid-f">f</div>
+        <div class="grid-item grid-g">g</div>
+        <div class="grid-item grid-h">h</div>
+        <div class="grid-item grid-i">i</div>
+        <div class="grid-item grid-j">j</div>
     </section>
-  </div>
-  <div>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
   </div>
   <div>
     <h1>News Article</h1>
@@ -54,5 +69,18 @@
     </section>
   </div>
 </body>
+<footer>
+  <ul>
+    <a href="www.facebook.com">
+      <li>facebook</li>
+    </a>
+    <a href="www.instagram">
+      <li>instagram</li>
+    </a>
+    <a href="länktillkontaktsida">
+      <li>contact</li>
+    </a>
+  </ul>
+</footer>
 
 </html>
