Added the link to the deployed site to the README & cleaned upp the comments

--- a/code/index.html
+++ b/code/index.html
@@ -37,6 +37,7 @@
     </nav>
   </header>
 
+  <!-- BIG NEWS -->
   <section class="big-news-container">
     <article class="grid-item big-news">
       <img class="big-news-img" src="./images/honey-bee.jpg" alt="Honey bee at work">
@@ -47,9 +48,8 @@
     </article>
   </section>
 
-
+  <!-- OTHER NEWS -->
   <section class="other-news-container">
-
     <article class="other-news-item">
       <img src="./images/sleep.jpg" alt="The power of sleep">
       <div class="other-news-item-text">
@@ -90,7 +90,7 @@
 
   <div class="footer">
     <p class="footer-text">This news site was made by Susanne Ekenheim as the first project in web developmet
-      bootcamp. August 2023</p>
+      bootcamp, August 2023</p>
 
 </body>
 
