navb drop hamb.bar

--- a/code/index.html
+++ b/code/index.html
@@ -12,91 +12,100 @@
 
 <body>
   <div>
+    <!-- TEST LOGO -->
+    <nav class="navbar">
+      <div class="logo">MUO</div>
 
+      <!-- NAVIGATION MENU -->
+      <ul class="nav-links">
 
-    <ul>
-      <li><a class="active" href="#home">Home</a></li>
-      <li><a href="#news">News</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#about">About</a></li>
-    </ul>
+        <!-- USING CHECKBOX HACK (ikon og drop) -->
+        <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+        <input type="checkbox" id="checkbox_toggle" />
+        <!-- NAVIGATION MENUS -->
+        <div class="menu">
 
+          <li><a href="/">Home</a></li>
+          <li><a href="/">About</a></li>
 
-    <section class="grid-parent">
+          <li class="services">
+            <a href="/">Services</a>
+      </ul>
 
-      <div class="grid-item grid-one">HEADER TEST</div>
-      <div class="grid-item sidebar">test</div>
-      <div class="grid-item grid-two">2</div>
-      <div class="grid-item grid-three">3</div>
-      <div class="grid-item grid-four">4
-        <p1>MYE TEKST HER KKKKKKKKKKKKKKKKKKKKKKKKK OOOOOOOOOOOOOOOOOOO </p>
-          <p2>MYE TEKST HER KKKKKKKKKKKKKKKKKKKKKKKKK OOOOOOOOOOOOOOOOOOO </p>
-      </div>
-      <div class="grid-item grid-five">5</div>
-      <div class="grid-item grid-six">6</div>
-      <div class="grid-item grid-seven">7</div>
-      <div class="grid-item grid-eight">8</div>
-      <!--begynne med str før jeg legger mye inn-->
-    </section>
-
-
-    <header>
-      <h1>Navn</h1>
-    </header>
-    <!-- Some kind of logo and navbar -->
+      </li>
+  </div>
+  </ul>
+  </nav>
 
 
 
-    <section class="flex-parent">
-      <div class="flex-child red">
-        <img src="./blomst.png" alt="">
-        <button>Click here</button>
-      </div>
 
-      <div class="flex-child blue">
-        <img src="./blomst2.png" alt="">
-        <button>Click here</button>
-      </div>
-    </section>
 
-    <div class="first-section-box">
 
-      <section class="big-news">
-        <p>big news
-          en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en
-          del
-          tekst en del tekst en del tekst en del tekst</p>
-        <!-- The big news content -->
-      </section>
 
-      <section class="daily-news">
-        <p>daly news
-          en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en del tekst en
-          del
-          tekst en del tekst en del tekst en del tekst
-        </p>
-        <!-- The other news  -->
-      </section>
 
+  <!--fjernet over-->
+  <section class="grid-parent">
+
+    <div class="grid-item grid-one">
+      <h1>HEADER TEST OG BILDE</h1>
     </div>
+
+    <div class="grid-item sidebar">test</div>
+
+    <div class="grid-item grid-two">
+      <p>big news
+        hmm</p>
+    </div>
+
+    <div class="grid-item grid-three">
+      <p>daly news
+        testing
+      </p>
+    </div>
+
+    <div class="grid-item grid-four">4
+      <p1>MYE TEKST HER KKKKKKKKKKKKKKKKKKKKKKKKK OOOOOOOOOOOOOOOOOOO </p>
+        <p2>MYE TEKST HER KKKKKKKKKKKKKKKKKKKKKKKKK OOOOOOOOOOOOOOOOOOO </p>
+    </div>
+    <div class="grid-item grid-five">5</div>
+    <div class="grid-item grid-six">6</div>
+    <div class="grid-item grid-seven">7</div>
+    <div class="grid-item grid-eight">8</div>
+    <!--begynne med str før jeg legger mye inn-->
+  </section>
+
+
+
+  <section class="flex-parent">
+    <div class="flex-child red">
+      <img src="./blomst.png" alt="">
+      <button>Click here</button>
+    </div>
+
+    <div class="flex-child blue">
+      <img src="./blomst2.png" alt="">
+      <button>Click here</button>
+    </div>
+  </section>
+
+
+  </div>
+  <footer>
+    <!--How to differentiate between navbar and footer? I want to center the footer, dont forget to add css for the footer after-->
+    <ul>
+      <li><a href="#news">instagram</a></li>
+      <li><a href="#news">tiktok</a></li>
+      <li><a href="#news">facebook</a></li>
+      <li><a href="#news">contact</a></li>
+    </ul>
+  </footer>
 
   </div>
 </body>
 </div>
 
 
-<footer>
-  <ul>
-    <a href="www.facebook.com">
-      <li>facebook</li>
-    </a>
-    <a href="www.instagram">
-      <li>instagram</li>
-    </a>
-    <a href="länktillkontaktsida">
-      <li>contact</li>
-    </a>
-  </ul>
-</footer>
+
 
 </html>
