test .\ one image, "surpriced

--- a/code/index.html
+++ b/code/index.html
@@ -53,7 +53,7 @@
 
     <div class="flex-child">
 
-      <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\atm surprised.jpg"
+      <img src=".\C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\atm surprised.jpg"
         alt="surprised" />
       <div class="flex-child-content">
         <h4>Atm-machine</h4>
