--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\Glavanews.png">
+    <img src="/bilder/Glavanews.png">
     <h1>Glava news</h1>
 
     <ul>
@@ -26,8 +26,8 @@
   <section class="grid-parent">
     <div class="grid-child1" border-sizing: border-box>
 
-      <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\trolljegeren2.jpg"
-        alt="Skogstur" width="500" height="250" style="max-width: 100%; height: auto;" />
+      <img src="/bilder/trolljegeren2.jpg" alt="Skogstur" width="500" height="250"
+        style="max-width: 100%; height: auto;" />
     </div>
 
     <div class="grid-child2" border-sizing: border-box>
@@ -53,8 +53,7 @@
 
     <div class="flex-child">
 
-      <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\atm surprised.jpg"
-        alt="surprised" />
+      <img src="/bilder/atm surprised.jpg" alt="surprised" />
       <div class="flex-child-content">
         <h4>Atm-machine</h4>
         <p>The village has now got an ATM machine! We no longer have to go to Arvika to use the ATM, thanks to Ica Nära
@@ -68,8 +67,7 @@
 
 
     <div class="flex-child">
-      <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\people forest.jpg"
-        alt="tourists" />
+      <img src="/bilder/people forest.jpg" alt="tourists" />
       <div class="flex-child-content">
         <h4>Glaskogen is on fire</h4>
         <p>No, not on actual fire! But it's a super hot destination for tourists, and Glaskogen is now breaking the
@@ -82,8 +80,7 @@
 
 
     <div class="flex-child">
-      <img src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\man funny.jpg"
-        alt="local" />
+      <img src="/bilder/man funny.jpg" alt="local" />
       <div class="flex-child-content">
         <h4>Read the locals thoughts about the tourists</h4>
         <p>What does the locas think about all the tourists coming to Glaskogen?
@@ -96,9 +93,7 @@
     </div>
 
     <div class="flex-child">
-      <img
-        src="C:\Users\elino\OneDrive\Skrivbord\Webbutveckling\myProject\project-news-site\bilder\postwoman on bike.jpg"
-        alt="mysterious woman" />
+      <img src="/bilder/postwoman on bike.jpg" alt="mysterious woman" />
       <div class="flex-child-content">
         <h4>Mysterious woman on bike</h4>
         <p>The police got a lot of calls about a mysterious woman on a bicycle. After ivestigating the matter police
