cant figure out media

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
   <div>
     <!-- TEST LOGO -->
     <nav class="navbar">
-      <div class="logo">MUO</div>
+      <div class="logo">BoE</div>
 
       <!-- NAVIGATION MENU -->
       <ul class="nav-links">
@@ -22,17 +22,14 @@
         <!-- USING CHECKBOX HACK (ikon og drop) -->
         <label for="checkbox_toggle" class="hamburger">&#9776;</label>
         <input type="checkbox" id="checkbox_toggle" />
+
         <!-- NAVIGATION MENUS -->
         <div class="menu">
-
-          <li><a href="/">Home</a></li>
-          <li><a href="/">About</a></li>
-
-          <li class="services">
-            <a href="/">Services</a>
+          <li><a href="/"> Menu </a></li>
+          <li><a href="/"> About us </a></li>
+          <li><a href="/"> Newsletter </a></li>
+        </div>
       </ul>
-
-      </li>
   </div>
   </ul>
   </nav>
@@ -45,36 +42,37 @@
 
 
   <!--fjernet over-->
-  <section class="grid-parent">
+  <ul>
+    <div class="grid-parent">
 
-    <div class="grid-item grid-one">
-      <h1>HEADER TEST OG BILDE</h1>
+      <div class="grid-item grid-one">
+        <h1>HEADER TEST OG BILDE</h1>
+      </div>
+
+      <div class="grid-item sidebar">test</div>
+
+      <div class="grid-item grid-two">
+        <p>big news
+          hmm</p>
+      </div>
+
+      <div class="grid-item grid-three">
+        <p>daly news
+          testing
+        </p>
+      </div>
+
+      <div class="grid-item grid-four">4
+        <p1>MYE TEKST HER KKKKKKKKKKKKKKKKKKKKKKKKK OOOOOOOOOOOOOOOOOOO </p>
+          <p2>MYE TEKST HER KKKKKKKKKKKKKKKKKKKKKKKKK OOOOOOOOOOOOOOOOOOO </p>
+      </div>
+      <div class="grid-item grid-five">5</div>
+      <div class="grid-item grid-six">6</div>
+      <div class="grid-item grid-seven">7</div>
+      <div class="grid-item grid-eight">8</div>
+      <!--begynne med str før jeg legger mye inn-->
     </div>
-
-    <div class="grid-item sidebar">test</div>
-
-    <div class="grid-item grid-two">
-      <p>big news
-        hmm</p>
-    </div>
-
-    <div class="grid-item grid-three">
-      <p>daly news
-        testing
-      </p>
-    </div>
-
-    <div class="grid-item grid-four">4
-      <p1>MYE TEKST HER KKKKKKKKKKKKKKKKKKKKKKKKK OOOOOOOOOOOOOOOOOOO </p>
-        <p2>MYE TEKST HER KKKKKKKKKKKKKKKKKKKKKKKKK OOOOOOOOOOOOOOOOOOO </p>
-    </div>
-    <div class="grid-item grid-five">5</div>
-    <div class="grid-item grid-six">6</div>
-    <div class="grid-item grid-seven">7</div>
-    <div class="grid-item grid-eight">8</div>
-    <!--begynne med str før jeg legger mye inn-->
-  </section>
-
+  </ul>
 
 
   <section class="flex-parent">
