Top page button

--- a/code/index.html
+++ b/code/index.html
@@ -21,6 +21,9 @@
       <a href="#link_to_Playgrounds">Playgrounds</a>
       <a href="#link_to_4H-Farms">4H-petfarms</a>
     </nav>
+    <div>
+      <a id="scroll-top"></a>
+    </div>
   </header>
 
   <main>
@@ -47,7 +50,9 @@
     </article>
   </main>
 
-
+  <div class="scroll-top-button">
+    <a href="#scroll-top">Top</a>
+  </div>
 
   <!-- The other news  -->
   <article>
