--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Responsive Navbar</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="code/style.css">
 </head>
 <body>
   <header>
@@ -31,21 +31,21 @@
     <p>Another amazing unicorn, but this time on a cake.</p>
     </article>
     <article class="other-news-content">
-      <img class="other-news-img" src="/assets/colors.jpg" alt="Cake">
+      <img class="other-news-img" src="/assets/colors.jpg" alt="Colors">
     <h2>Just nice colors</h2>
     <p>If you like unicorn news I bet you also like these colors!</p>
     </article>
     <article class="other-news-content">
-      <img class="other-news-img" src="/assets/surfing.jpg" alt="Cake">
+      <img class="other-news-img" src="/assets/surfing.jpg" alt="Surfing">
     <h2>Unicorns also enjoy surfing</h2>
     <p>This is just another piece of important news about unicorns.</p>
     </article>
     <article class="other-news-content">
-      <img class="other-news-img" src="/assets/houses.jpg" alt="Cake">
+      <img class="other-news-img" src="/assets/houses.jpg" alt="Houses">
     <h2>An amazing house</h2>
     <p>It probably lives alot of unicorns in this house. Which is great news.</p>
     </article>
   </div>
-<script src="script.js"></script>
+<script src="code/script.js"></script>
 </body>
 </html>
